# bandwidthconsole

./: .gitignore  LICENSE  Makefile  README.md  configure  docker-compose.yml  run-demo.sh
.github/workflows/: ci.yml  release.yml
agent/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dpdk  build.rs
agent/dpdk/: Dockerfile.probe  probe.c  shim.c
agent/src/: capabilities.rs  control.rs  dpdkrt.rs  frametest_cli.rs  main.rs  netenv.rs  procgroup.rs  protocol.rs  sysstat.rs  tls.rs
agent/src/engine/: dpdk.rs  frame.rs  mod.rs  quic.rs  tcp.rs  udp.rs
agent/tests/: dpdk-test.sh  mock_console.py
console/: pom.xml
console/src/main/java/com/bwtest/console/: App.java  Launcher.java  Orchestrator.java
console/src/main/java/com/bwtest/console/model/: AgentModel.java  Architecture.java  Capabilities.java  Dscp.java  FrameMode.java  FrameOrder.java  FrameSpec.java  FrameStorage.java  Protocol.java  RunRecord.java  Scenario.java  Telemetry.java  TransferMode.java
console/src/main/java/com/bwtest/console/net/: AgentConnection.java  ControlListener.java  ControlServer.java  HeadlessSmoke.java  InfluxClient.java  InfluxSmoke.java
console/src/main/java/com/bwtest/console/ui/: AgentsPane.java  Balance3D.java  CameraRig.java  CompareView.java  ConsoleUI.java  ControlPanel.java  CpuChart.java  FrameIoView.java  GanttView.java  Live3DPane.java  LiveChartView.java  PastRunsPane.java  PerStreamChart.java  RunStatusBar.java  (+4 more)
console/src/main/resources/com/bwtest/console/: app.css
packaging/: build-agent.sh  build-console.sh  verify-linux.sh
packaging/docker/: Dockerfile.linux
packaging/nfpm/: bwagent.yaml.in  postinstall.sh  postremove.sh  preremove.sh
packaging/resources/: GenerateIcon.java  bwconsole.icns
packaging/systemd/: bwagent.env  bwagent.service
