[package]
name = "bwagent"
version = "1.0.0"
edition = "2021"
description = "Bandwidth test surface: one binary, deployed everywhere; any agent can send to any other, with the JavaFX control plane picking the direction per run."
license = "MIT"

[[bin]]
name = "bwagent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "io-std", "time", "sync", "macros", "process", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
socket2 = { version = "0.5", features = ["all"] }
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.32"
# TLS 1.3 (TCP path) and QUIC.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
quinn = "0.11"
rcgen = "0.13"
futures-util = "0.3"

# Direct I/O for the multi-file (frametest) path: O_DIRECT on Linux, F_NOCACHE
# on macOS. Windows uses FILE_FLAG_NO_BUFFERING via std's OpenOptionsExt.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# Real DPDK integration is Linux-only and requires the DPDK SDK at build time.
# Compiled out by default so the agent builds portably everywhere.
default = []
dpdk = ["dep:cc", "dep:pkg-config"]

[build-dependencies]
# Only used when the `dpdk` feature is enabled (see build.rs).
cc = { version = "1", optional = true }
pkg-config = { version = "0.3", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
